kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-usermgmt
  labels:
    app: api-usermgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-usermgmt
  template:
    metadata:
      labels:
        app: api-usermgmt
    spec:
      containers:
      - name: api-usermgmt
        image: registry.fullstack.pw/api-usermgmt:latest
        ports:
        - containerPort: 8080
