kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-usermgmt
  labels:
    app: api-usermgmt
spec:
  selector:
    app: api-usermgmt
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
