kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-usermgmt
  labels:
    app: api-usermgmt
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/hostname: dev.api-usermgmt.fullstack.pw
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.org/client-max-body-size: "0"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - dev.api-usermgmt.fullstack.pw
    secretName: fullstack-tls
  ingressClassName: nginx
  rules:
  - host: dev.api-usermgmt.fullstack.pw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-usermgmt
            port:
              number: 8080
